--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           <div  class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ">
               <li class="nav-item mx-5 ">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <a id="Home" class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item mx-5 ">
                 <a class="nav-link" href="#">Product</a>
@@ -48,7 +48,7 @@
   
     <main>
      
-      <section class="container mt-5">
+      <section class="container mt-5" id="Product">
         <h2 style="color:rgba(54,57,88,1);">woman jacket</h2>
         <div class="row row-cols-1 row-cols-md-3 g-4">
           <div class="col-md-6 col-lg-4 col-sm-12">
@@ -137,7 +137,7 @@
         </div>
       </section>
 
-     <section class=" container  pt-5 mt-5">
+     <section class=" container  pt-5 mt-5 " id="About us">
        <div class="row align-items-center">
      <div class="col-lg-6 col-sm-12 " >
       <div class="card col-sm-12 mb-3 d-flex justify-content-between align-items-center shadow-lg bg-white box-1" style="max-width: 450px;">
@@ -194,7 +194,7 @@
     </div>
      </section>
 
-     <section  id="Subscribe" class="box-2 container mt-5 pt-5">
+     <section  id="Subscribe" class="box-2 container mt-5 pt-5" id="Contact us">
       <div class="row d-flex justify-content-center align-items-center ">
         <div class="col-sm-6 color">
           <h1>LET'S STAY IN TOUCH</h1>
