--- a/index.html
+++ b/index.html
@@ -24,24 +24,24 @@
                 <a id="Home" class="nav-link active" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item mx-5 ">
-                <a class="nav-link" href="#">Product</a>
+                <a class="nav-link" href="#Product">Product</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link" href="#">About us</a>
+                <a class="nav-link" href="#About us">About us</a>
               </li>
               <li class="nav-item mx-5">
-                <a class="nav-link " href="#" >Contact us</a>
+                <a class="nav-link " href="#Contact us" >Contact us</a>
               </li>
             </ul>
           </div>
         </div>
       </nav>
     <div class=" panda container">
-        <div class="row align-items-center"><div class="col-sm-12 col-md-6" > <h1> <span style="color: orange;">Be the Penguins</span> <br><span style="color:rgba(54,57,88,1);"> of Winter</span></h1>
+        <div class="row align-items-center"><div class="col-sm-12 col-md-6 col-lg-6" > <h1> <span style="color: orange;">Be the Penguins</span> <br><span style="color:rgba(54,57,88,1);"> of Winter</span></h1>
           <h6>The Penguins industry is one of the biggest & multinational <br> company of the Asia-Pacific region.</h6>
           <button type="button" class="btn button text-white"><img src="Logo, Icon/shopping-cart 1.png" alt=""> BUY NOW</button>
           </div>
-          <div class="girl col-sm-12 col-md-6"><img src="image/Group 33091.png" alt=""></div>
+          <div class="girl col-sm-12 col-md-6 col-lg-6"><img src="image/Group 33091.png" alt=""></div>
         </div></div>
     </header>
 
@@ -194,7 +194,7 @@
     </div>
      </section>
 
-     <section  id="Subscribe" class="box-2 container mt-5 pt-5" id="Contact us">
+     <section  class="box-2 container mt-5 pt-5" id="Contact us">
       <div class="row d-flex justify-content-center align-items-center ">
         <div class="col-sm-6 color">
           <h1>LET'S STAY IN TOUCH</h1>
