--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
           <h6>The Penguins industry is one of the biggest & multinational <br> company of the Asia-Pacific region.</h6>
           <button type="button" class="btn button text-white"><img src="Logo, Icon/shopping-cart 1.png" alt=""> BUY NOW</button>
           </div>
-          <div class="girl col-sm-12 col-md-6 col-lg-6"><img src="image/Group 33091.png" alt=""></div>
+          <div class="col-sm-12 col-md-6 col-lg-6"><img class="w-100" src="image/Group 33091.png" alt=""></div>
         </div></div>
     </header>
 
